[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Interface/IconeMascara.png" type="Texture" id=1]
[ext_resource path="res://Fonts/NotoSansMono_Condensed-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Menu/CaixaDeDialogo.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Entrada"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 300 ), Vector2( 240, 100 ), Vector2( 240, 150 ), Vector2( 240, 135 ) ]
}

[node name="Dialog" type="CanvasLayer" groups=[
"GUI",
]]
layer = 10
offset = Vector2( 240, 135 )
transform = Transform2D( 1, 0, 0, 1, 240, 135 )
script = ExtResource( 4 )

[node name="CorpoDaCaixa" type="PanelContainer" parent="."]
self_modulate = Color( 0.407843, 0.407843, 0.407843, 1 )
margin_right = 800.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EspacoDeExibicao" type="MarginContainer" parent="CorpoDaCaixa"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 443.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CorpoDaCaixa/EspacoDeExibicao"]
margin_left = 20.0
margin_top = 20.0
margin_right = 766.0
margin_bottom = 416.0
custom_constants/separation = 15

[node name="InformacoesEsquerda" type="PanelContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer"]
self_modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
margin_right = 250.0
margin_bottom = 396.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda"]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 389.0

[node name="InformacoesEsquerda" type="CenterContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda/VBoxContainer"]
margin_right = 236.0
margin_bottom = 382.0
size_flags_vertical = 3

[node name="Descricao" type="VBoxContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda/VBoxContainer/InformacoesEsquerda"]
margin_left = 38.0
margin_top = 112.0
margin_right = 198.0
margin_bottom = 270.0
custom_constants/separation = 20

[node name="Icone" type="TextureRect" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda/VBoxContainer/InformacoesEsquerda/Descricao"]
margin_right = 160.0
margin_bottom = 96.0
texture = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda/VBoxContainer/InformacoesEsquerda/Descricao"]
margin_top = 116.0
margin_right = 160.0
margin_bottom = 158.0

[node name="NomeDoItem" type="Label" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesEsquerda/VBoxContainer/InformacoesEsquerda/Descricao/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "MÃ¡scara"
align = 1
valign = 1

[node name="InformacoesDireita" type="PanelContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer"]
self_modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
margin_left = 265.0
margin_right = 746.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita"]
margin_left = 7.0
margin_top = 7.0
margin_right = 474.0
margin_bottom = 389.0

[node name="ContainerDescricao" type="MarginContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer"]
margin_right = 467.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 60
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="Descricao" type="RichTextLabel" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer/ContainerDescricao"]
margin_left = 50.0
margin_top = 60.0
margin_right = 417.0
margin_bottom = 274.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer"]
margin_top = 288.0
margin_right = 467.0
margin_bottom = 382.0
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer/MarginContainer"]
margin_top = 30.0
margin_right = 467.0
margin_bottom = 64.0

[node name="Confirmar" type="Button" parent="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 178.0
margin_right = 289.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "Confirmar"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Entrada"
anims/Entrada = SubResource( 4 )
[connection signal="button_up" from="CorpoDaCaixa/EspacoDeExibicao/HBoxContainer/InformacoesDireita/VBoxContainer/MarginContainer/CenterContainer/Confirmar" to="." method="_on_Confirmar_button_up"]
